# AutomaticPaymentLinking

./: .env.example  .gitignore  pyproject.toml
src/: main.py
src/apps/customerorder/: api.py  dependencies.py  exception_handlers.py  exceptions.py  schemas.py
src/apps/customerorder/domain/: entities.py  value_objects.py
src/apps/customerorder/services/: customerorder_client.py  customerorder_service.py
src/apps/demand/: dependencies.py  exceptions.py
src/apps/demand/domain/: entities.py
src/apps/demand/services/: demand_client.py  demand_service.py
src/apps/hooks/: README.md  api.py  dependencies.py  exception_handlers.py  exceptions.py  models.py  repository.py  schemas.py  service.py
src/apps/hooks/domain/: entities.py  value_objects.py
src/apps/hooks/repositories/: base.py  webhook_repository.py
src/apps/hooks/services/: moysklad_client.py  webhook_handler.py  webhook_operations.py  webhook_service.py
src/apps/hooks/uow/: unit_of_work.py
src/apps/invoiceout/: dependencies.py  exceptions.py
src/apps/invoiceout/domain/: entities.py
src/apps/invoiceout/services/: invoiceout_client.py  invoiceout_service.py
src/apps/ms_auth/: api.py  dependencies.py  schemas.py  service.py
src/apps/ms_auth/domain/: entities.py  value_objects.py
src/apps/paymentin/: api.py  dependencies.py  exception_handlers.py  exceptions.py  schemas.py  webhook_handler.py
src/core/: config.py  database.py  db.py  logging_config.py  models.py  repository.py  uow.py
src/templates/: base.html  index.html
src/templates/partials/: link_settings.html
(+5 files in other folders)
