[tool.poetry]
name = "automaticpaymentlinking"
version = "0.1.0"
description = ""
authors = ["RomanL91 <dev_roman91@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.123.9"
uvicorn = {extras = ["standard"], version = "^0.38.0"}
jinja2 = "^3.1.6"
python-multipart = "^0.0.20"
httpx = "^0.28.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.44"}
aiosqlite = "^0.21.0"
pydantic-settings = "^2.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
